# S3D_Senior_Design

./: Main  README.md  pyproject.toml
Data/Inputs/: baseline_inputs.xlsx  fluids.xlsx
Data/Outputs/: BASE_results.json
Data/Outputs/Cases_Reports/: BASE_design_packet.json  BASE_design_packet.md
src/s3d_senior_design.egg-info/: PKG-INFO  SOURCES.txt
src/stc/: __init__.py  cli.py
src/stc/components/: __init__.py  accumulator.py  coldplate.py  lines.py  pump.py  radiator.py
src/stc/export/: design_packet.py
src/stc/io/: load_excel.py
src/stc/loop/: __init__.py  solver.py
src/stc/utils/: trace.py
