[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3d-senior-design"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "openpyxl",
  "numpy",
  "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]